# gateman

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: client.rs  control.rs  pwm_steps.rs  read_encoder.rs
src/: api.rs  cli.rs  drive.rs  encoder.rs  error.rs  gate.rs  lib.rs  limit.rs  main.rs
