[package]
name = "gateman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateman"
path = "src/main.rs"

[dev-dependencies]
clap = { version = "3", features = ["derive"]}

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
clap = { version = "3.1", features = ["derive"] }
ctrlc = "3.2"

[dependencies.rppal]
version = "0.13"
features = ["hal"]
