[package]
name = "gateman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateman"
path = "src/main.rs"

[dev-dependencies]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
rppal = { version = "0.13.1", features = ["hal"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
ctrlc = "3.2"
